dist/1.0/bin/sample/retrieveUnpackaged/objects/Component__c.object
<CustomObject>
    <fields>
        <fullName>Attribute_Set_Type__c</fullName>
        <description>Indicates what Attribute Set should be sent to Billing under this Component</description>
        <inlineHelpText>Indicates what Attribute Set should be sent to Billing under this Component</inlineHelpText>
        <label>Attribute Set Type</label>
        <referenceTo>Attribute_Set_Type__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BCT_Subservice_ID__c</fullName>
        <description>ID of BCT subservice corresponding to this Component</description>
        <inlineHelpText>ID of BCT subservice corresponding to this Component</inlineHelpText>
        <label>BCT Subservice ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundle_to_Synchronize__c</fullName>
        <description>Technical field used by synchronization mechanism. Used in case of desynchronization. Stores name of the Bundle that contains this component and should be synchronized.</description>
        <inlineHelpText>Technical field used by synchronization mechanism. Used in case of desynchronization. Stores name of the Bundle that contains this component and should be synchronized.</inlineHelpText>
        <label>Bundle to Synchronize</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_in_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this item has been created in Billing system (during Bundle synchronization)</description>
        <inlineHelpText>Indicates if this item has been created in Billing system (during Bundle synchronization)</inlineHelpText>
        <label>Created in Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dimension_Dictionary__c</fullName>
        <description>Relation to Dimension Dictionary used in SK Billing.</description>
        <inlineHelpText>Relation to Dimension Dictionary used in SK Billing.</inlineHelpText>
        <label>Dimension Dictionary</label>
        <referenceTo>Dimension_Dictionary__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>For_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether the component should be send to Billing or not;</description>
        <inlineHelpText>Specifies whether the component should be send to Billing or not;</inlineHelpText>
        <label>For Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GTS_Location__c</fullName>
        <description>Products will be marked with multipicklist field GTS Location (GTS Poland, GTS Slovakia etc. ) mainly to separate Products for SK and other countries</description>
        <inlineHelpText>Please choose countires for this product</inlineHelpText>
        <label>GTS Location</label>
        <picklist>
            <picklistValues>
                <fullName>GTS Czech Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTS Slovakia</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>HasUsage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if username Attribute can be used to obtain usage data for Component</description>
        <inlineHelpText>Indicates if username Attribute can be used to obtain usage data for Component</inlineHelpText>
        <label>Has usage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Pricing_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Pricing Items under this Component should be included in Price when verifying BCT calculation</description>
        <inlineHelpText>Indicates whether Pricing Items under this Component should be included in Price when verifying BCT calculation</inlineHelpText>
        <label>Include Pricing Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Id__c</fullName>
        <description>Unique number for communication with external systems eg. Billing.</description>
        <displayFormat>2{000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>Unique number for communication with external systems.</inlineHelpText>
        <label>Integration ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Invoice_Order__c</fullName>
        <defaultValue>1</defaultValue>
        <description>DAVO field - it is required in Billing: Indicated the order on which component will be printed on invoice document</description>
        <inlineHelpText>Indicates the order on which components will be printed on invoice document</inlineHelpText>
        <label>Invoice Order</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Label_CZE__c</fullName>
        <description>Display label stored in the language specified.</description>
        <inlineHelpText>Display label stored in the language specified.</inlineHelpText>
        <label>Label (Czech)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_Eng__c</fullName>
        <description>Display label stored in the language specified.</description>
        <inlineHelpText>Display label stored in the language specified.</inlineHelpText>
        <label>Label (English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_HUN__c</fullName>
        <description>Display label stored in the language specified.</description>
        <inlineHelpText>Display label stored in the language specified.</inlineHelpText>
        <label>Label (Hungarian)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_POL__c</fullName>
        <description>Display label stored in the language specified.</description>
        <inlineHelpText>Display label stored in the language specified.</inlineHelpText>
        <label>Label (Polish)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_ROU__c</fullName>
        <description>Display label stored in the language specified.</description>
        <inlineHelpText>Display label stored in the language specified.</inlineHelpText>
        <label>Label (Romanian)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_SVK__c</fullName>
        <description>Display label stored in the language specified.</description>
        <inlineHelpText>Display label stored in the language specified.</inlineHelpText>
        <label>Label (Slovak)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_AST__c</fullName>
        <description>Technical field which will remember the last related AST, which should be disconnected in Durian. The field will be automatically clean after succesfull synchronization</description>
        <inlineHelpText>Technical field for Billing SK.</inlineHelpText>
        <label>Last AST</label>
        <referenceTo>Attribute_Set_Type__c</referenceTo>
        <relationshipLabel>Components (Last AST)</relationshipLabel>
        <relationshipName>Components1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>Line of Business that categorizes the Component.</description>
        <inlineHelpText>Line of Business that categorizes the Component.</inlineHelpText>
        <label>Line of Business</label>
        <referenceTo>Enumerators__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_AST__c</fullName>
        <description>Technical field, which stores the previously assigned AST</description>
        <inlineHelpText>Technical field for Billing SK.</inlineHelpText>
        <label>Previous AST</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProvisioningType__c</fullName>
        <description>Determines whether manual or automatic provisioning will be used</description>
        <inlineHelpText>Determines whether manual or automatic provisioning will be used</inlineHelpText>
        <label>Provisioning Type</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automatic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Simplified_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicating if component will be displayed for Simplified Orders.</description>
        <inlineHelpText>Flag indicating if component will be displayed for Simplified Orders.</inlineHelpText>
        <label>Simplified Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>Technical field used for migration between environments.</description>
        <externalId>true</externalId>
        <inlineHelpText>Technical field used for migration between environments.</inlineHelpText>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this definiton matches a definition in Billing system.</description>
        <inlineHelpText>Indicates if this definiton matches a definition in Billing system.</inlineHelpText>
        <label>Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueName__c</fullName>
        <description>Tehcnical field used for validation of name field&apos;s uniqueness.</description>
        <inlineHelpText>Tehcnical field.</inlineHelpText>
        <label>UniqueName</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Validity_from_Attributes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PRISRAII-41 Component&apos;s validity dates are obtained from it&apos;s attributes</description>
        <inlineHelpText>Component&apos;s validity dates are obtained from it&apos;s attributes</inlineHelpText>
        <label>Validity from Attributes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Voice_Types_Created_in_Billing__c</fullName>
        <description>Cummulative fields, which stores the VoiceTypes already send to Durian (technical field);</description>
        <inlineHelpText>Tecnnical field for Billing SK</inlineHelpText>
        <label>Voice Types Created in Billing</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Voice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Voice flag - if checked then it is be possible to select TARIFF</description>
        <inlineHelpText>Voice flag - if checked then it is be possible to select TARIFF</inlineHelpText>
        <label>Voice</label>
        <type>Checkbox</type>
    </fields>
    <label>Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Dimension_Dictionary__c</columns>
        <columns>Attribute_Set_Type__c</columns>
        <columns>ProvisioningType__c</columns>
        <columns>For_Billing__c</columns>
        <columns>HasUsage__c</columns>
        <columns>Voice__c</columns>
        <columns>Integration_Id__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>